--- a/game/Cargo.toml
+++ b/game/Cargo.toml
@@ -6,6 +6,8 @@ edition = "2021"
 [dependencies]
 avian3d = "0.2.0"
 bevy = "0.15"
+bevy_channel_trigger = "0.3.0"
+wasm-bindgen = "0.2.99"
 
 # Enable a small amount of optimization in the dev profile.
 [profile.dev]
