--- a/game/Cargo.toml
+++ b/game/Cargo.toml
@@ -7,27 +7,29 @@ edition = "2021"
 avian3d = "0.2.0"
 bevy = "0.15"
 bevy_channel_trigger = "0.3.0"
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0.134"
 wasm-bindgen = "0.2.99"
 
 # Enable a small amount of optimization in the dev profile.
 [profile.dev]
 opt-level = 1
 
+[lib]
+crate-type = ["cdylib"]
+
 # Enable a large amount of optimization in the dev profile for dependencies.
 [profile.dev.package."*"]
 opt-level = 3
 
-[target.wasm32-unknown-unknown]
-runner = "wasm-server-runner"
-
 [profile.release]
-debug = false
+# debug = false
 # Compile the entire crate as one unit.
 # Slows compile times, marginal improvements.
-codegen-units = 1
+# codegen-units = 1
 # Do a second optimization pass over the entire program, including dependencies.
 # Slows compile times, marginal improvements.
-lto = "thin"
+# lto = "thin"
 
 # Optimize for size in the wasm-release profile to reduce load times and bandwidth usage on web.
 [profile.wasm-release]
