--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -7,5 +7,6 @@ edition = "2021"
 axum = { version = "0.7.9", features = ["ws"] }
 futures = "0.3"
 tokio = { version = "1", features = ["full"] }
+tower-http = { version = "0.6.1", features = ["fs", "trace", "compression-gzip"] }
 tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
